--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,343 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="./images/logo/logo-NAMU.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+
+    <header class="header">
+      <div class="header__img"></div>
+      <div class="header__wrapper container">
+        <div class="header__nav">
+          <a href="#menu" class="header__icon"></a>
+          <div class="header__logo-wrapper">
+            <a href="#" class="header__link">
+              <img src="./images/logo/logo-NAMU-1.svg" alt="logo NAMU"
+              class="header__logo-small">
+              <img src="./images/logo/logo-NAMU.svg" alt="logo NAMU"
+              class="header__logo-large">
+            </a>
+          </div>
+          <p class="header__icon-hidden"></p>
+        </div>
+
+        <section class="header__museum-of-arts museum-of-arts">
+          <h1 class="museum-of-arts__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="#currentevents" class="museum-of-arts__link button">
+            <p class="button__title">КВИТКИ</p>
+            <img
+              src="./images/icons/icon-arrow-white.svg"
+              alt="icon arrow"
+              class="button__img"
+            >
+          </a>
+          <a href="#currentevents" class="museum-of-arts__line">ПОДІЇ</a>
+        </section>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="menu__content container">
+          <a href="#" class="menu__icon-close"></a>
+          <div class="menu__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a href="#currentevents" class="nav__link ">Виставки та <br> події</a>
+              </li>
+            </ul>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#subscription" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__work-chart work-chart">
+            <p class="work-chart__title">Графік роботи</p>
+            <div class="work-chart__date">
+              <p class="work-chart__item">
+                <span class="work-chart__time">12:00 — 20:00</span>
+                <span class="work-chart_day">середа</span>
+              </p>
+              <p class="work-chart__item">
+                <span class="work-chart__time">12:00 — 20:00</span>
+                <span class="work-chart_day">четвер</span>
+              </p>
+              <p class="work-chart__item">
+                <span class="work-chart__time">12:00 — 20:00</span>
+                <span class="work-chart_day">п’ятниця</span>
+              </p>
+              <p class="work-chart__item">
+                <span class="work-chart__time">11:00 — 19:00</span>
+                <span class="work-chart_day">субота</span>
+              </p>
+              <p class="work-chart__item">
+                <span class="work-chart__time">11:00 — 19:00</span>
+                <span class="work-chart_day">неділя</span>
+              </p>
+            </div>
+            <div class="work-chart__description">
+              <span class="work-chart__time">Вихідні:</span>
+              <span class="work-chart__day">понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="current-events container" id="currentevents">
+        <h2 class="current-events__title">Актуальні події</h2>
+        <div class="current-events__cards">
+          <article class="current-events_card card">
+            <img
+              src="./images/current-events/current-events-img-1.png"
+              alt="Фото картини колекції Градобанку"
+              class="card__img"
+            >
+            <div class="card__content">
+              <div class="card__subtitle">
+                <p class="card__subtitle-name">ВИСТАВКА</p>
+                <p class="card__subtitle-date">26.08-29.11.2019</p>
+              </div>
+              <div class="card__wrapper">
+                <div class="card__title-wrapper">
+                  <h3 class="card__title">Йду і повертаюсь</h3>
+                  <p class="card__square"></p>
+                </div>
+                <p class="card__description">
+                  Національний Художній Музей України презентує унікальну частину колекції
+                  Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </article>
+
+          <article class="current-events_card card">
+            <img
+              src="./images/current-events/current-events-img-2.png"
+              alt="Фото картини Тетяни Яблонської"
+              class="card__img"
+            >
+            <div class="card__content">
+              <div class="card__subtitle">
+                <p class="card__subtitle-name">ВИСТАВКА</p>
+                <p class="card__subtitle-date">26.08-29.11.2019</p>
+              </div>
+              <div class="card__wrapper">
+                <div class="card__title-wrapper">
+                  <h3 class="card__title">І спогади і мрії</h3>
+                  <p class="card__square"></p>
+                </div>
+                <p class="card__description">
+                  Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці Тетяни Яблонської  відкриває ретроспективну ювілейну виставку
+                  «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="classicism-romanticism">
+        <div class="classicism-romanticism__content">
+          <div class="classicism-romanticism__data">
+            <p class="classicism-romanticism__event">ЛЕКЦІЯ</p>
+            <p class="classicism-romanticism__date">26/08/2019 - 11:00</p>
+          </div>
+          <h2 class="classicism-romanticism__title">Від класицизму до <br> романтизму</h2>
+        </div>
+      </section>
+
+      <section class="gallery container" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__wrapper">
+          <div class="gallery__slider">
+            <img
+              id="slide-1"
+              src="./images/gallery/gallery-photo-1.svg"
+              alt="Галерея фото картини"
+              class="gallery__slide
+                gallery__slide--square"
+            >
+            <img
+              id="slide-2"
+              src="./images/gallery/gallery-photo-2.svg"
+              alt="Галерея фото картини"
+              class="gallery__slide
+                gallery__slide--wide"
+            >
+            <img
+              id="slide-3"
+              src="./images/gallery/gallery-photo-3.svg"
+              alt="Галерея фото картини"
+              class="gallery__slide
+                gallery__slide--small
+                gallery__slide--wide"
+            >
+            <img
+              id="slide-4"
+              src="./images/gallery/gallery-photo-4.svg"
+              alt="Галерея фото картини"
+              class="gallery__slide
+                gallery__slide--small
+                gallery__slide--square"
+            >
+          </div>
+          <div class="gallery__nav">
+            <a href="#slide-1" class="gallery__button"></a>
+            <a href="#slide-2" class="gallery__button"></a>
+            <a href="#slide-3" class="gallery__button"></a>
+            <a href="#slide-4" class="gallery__button"></a>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="subscription__wrapper container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="#"
+              class="subscription__form"
+              onsubmit="this.reset()"
+            >
+              <input
+                type="email"
+                class="subscription__input"
+                placeholder="E-mail"
+                required
+              >
+              <button class="subscription__button">
+                <img
+                  src="./images/icons/icon-arrow-black.svg"
+                  alt="black arrow"
+                  class="button__img
+                    subscription__img"
+                >
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer container">
+      <div class="footer__images images">
+        <a href="#" class="images__logo">NA<br>MU</a>
+        <div class="images__icons">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            class="images__icon"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="images__icon
+              images__icon--instagram"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+
+      <div class="footer__wrapper">
+        <div class="work-chart footer__work-chart">
+          <h2 class="work-chart__title work-chart__title--color-text">Графік роботи</h2>
+          <div class="work-chart__date work-chart__date--marg">
+            <p class="work-chart__item">
+              <span class="work-chart__time work-chart__time--color-text">12:00 — 20:00</span>
+              <span class="work-chart_day work-chart__day--color-text">середа</span>
+            </p>
+            <p class="work-chart__item">
+              <span class="work-chart__time work-chart__time--color-text">12:00 — 20:00</span>
+              <span class="work-chart_day work-chart__day--color-text">четвер</span>
+            </p>
+            <p class="work-chart__item">
+              <span class="work-chart__time work-chart__time--color-text">12:00 — 20:00</span>
+              <span class="work-chart_day work-chart__day--color-text">п’ятниця</span>
+            </p>
+            <p class="work-chart__item">
+              <span class="work-chart__time work-chart__time--color-text">11:00 — 19:00</span>
+              <span class="work-chart_day work-chart__day--color-text">субота</span>
+            </p>
+            <p class="work-chart__item">
+              <span class="work-chart__time work-chart__time--color-text">11:00 — 19:00</span>
+              <span class="work-chart_day work-chart__day--color-text">неділя</span>
+            </p>
+          </div>
+          <div class="work-chart__description">
+            <span class="work-chart__time work-chart__time--color-text">Вихідні:</span>
+            <span class="work-chart__day work-chart__day--color-text">понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </span>
+          </div>
+        </div>
+
+        <div class="footer__contacts contacts" id="contacts">
+          <h2 class="contacts__title">Контакти:</h2>
+          <div class="contacts__content">
+            <a
+              href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+              class="contacts__link"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+380442781357" class="contacts__link">тел. +38 (044) 278-13-57</a>
+            <a href="tel:+380442787454" class="contacts__link">факс +38 (044) 278-74-54</a>
+            <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+          </div>
+          <a href="#" class="contacts__item-abs"></a>
+        </div>
+      </div>
+
+      <div class="nav footer__nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#gallery" class="nav__link nav__link--color-text">Галерея</a>
+          </li>
+          <li class="nav__item">
+            <a href="#currentevents" class="nav__link nav__link--color-text">Виставки та <br> події</a>
+          </li>
+        </ul>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#subscription" class="nav__link nav__link--color-text">Про Нас</a>
+          </li>
+          <li class="nav__item">
+            <a href="#contacts" class="nav__link nav__link--color-text">Контакти</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__copyright">
+        <p class="footer__sub-copyright">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__sub-copyright">Designed by Zhyriada Marina</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
