--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
-    <link rel="favicon" href="images/NAMU.svg">
+    <link rel="icon" href="images/NAMU.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -24,75 +24,83 @@
             <img src="images/NAMU.svg" alt="logo">
           </a>
         </div>
-
-        <div class="button">
-          <button href="#" class="button__click">
-            <div class="button__icon"></div>
-          </button>
+      </div>
+      <div class="button">
+        <a href="#contacts" class="button__link">
           <p class="button__text">КВИТКИ</p>
-        </div>
+          <div class="button__green">
+            <div class="button__icon"></div>
+          </div>
+        </a>
+      </div>
+
+      <div class="event">
+        <div class="event__stick"></div>
+        <span class="event__text">ПОДІЇ</span>
       </div>
     </header>
 
     <aside class="menu page_menu" id="menu">
-      <div class="menu__icon">
-        <a href="#" class="icon icon--close"></a>
-      </div>
-      <div class="menu__links">
-        <div class="menu__links__position">
-          <a href="#" class="menu__text">Галерея</a>
-          <br>
-          <a href="#events" class="menu__text">Виставки та <br> події</a>
+      <div class="menu__container">
+        <div class="menu__icon">
+          <a href="#" class="icon icon--close"></a>
         </div>
-        <div class="menu__links__position menu__links__position--second">
-          <a href="#subscribe" class="menu__text">Про нас</a>
-          <br>
-          <a href="#contacts" class="menu__text">Контакти</a>
-        </div>
-      </div>
-
-      <div class="menu__rectangle"></div>
-
-      <div class="schedule">
-        <p class="schedule__text">Графік роботи</p>
-
-        <ul class="schedule__days">
-          <li class="schedule__text--time">
-            12:00 — 20:00
-            <h4 class="schedule__text--inline">середа</h4>
-          </li>
-
-          <li class="schedule__text--time">
-            12:00 — 20:00
-            <p class="schedule__text--inline">четвер</p>
-          </li>
-
-          <li class="schedule__text--time">
-            12:00 — 20:00
-            <p class="schedule__text--inline">п’ятниця</p>
-          </li>
-
-          <li class="schedule__text--time">
-            11:00 — 19:00
-            <p class="schedule__text--inline">субота</p>
-          </li>
-
-          <li class="schedule__text--time">
-            11:00 — 19:00
-            <p class="schedule__text--inline">неділя</p>
-          </li>
-        </ul>
-
-        <div class="schedule__weekends">
-          <h3 class="schedule__weekends--time">
-            Вихідні:
-            <p class="schedule__weekends--inline">понеділок, вівторок Каса припиняє
-              роботу за 1 годину до закриття музею
-            </p>
-          </h3>
+        <div class="menu__links">
+          <div class="menu__links__position">
+            <a href="#" class="menu__text">Галерея</a>
+            <br>
+            <a href="#events" class="menu__text">Виставки та <br> події</a>
+          </div>
+          <div class="menu__links__position menu__links__position--second">
+            <a href="#subscribe" class="menu__text">Про нас</a>
+            <br>
+            <a href="#contacts" class="menu__text">Контакти</a>
+          </div>
         </div>
 
+        <div class="menu__rectangle"></div>
+
+        <div class="schedule">
+          <p class="schedule__text">Графік роботи</p>
+
+          <ul class="schedule__days">
+            <li class="schedule__text--time">
+              12:00 — 20:00
+              <h4 class="schedule__text--inline">середа</h4>
+            </li>
+
+            <li class="schedule__text--time">
+              12:00 — 20:00
+              <p class="schedule__text--inline">четвер</p>
+            </li>
+
+            <li class="schedule__text--time">
+              12:00 — 20:00
+              <p class="schedule__text--inline">п’ятниця</p>
+            </li>
+
+            <li class="schedule__text--time">
+              11:00 — 19:00
+              <p class="schedule__text--inline">субота</p>
+            </li>
+
+            <li class="schedule__text--time">
+              11:00 — 19:00
+              <p class="schedule__text--inline">неділя</p>
+            </li>
+          </ul>
+
+          <div class="schedule__weekends">
+            <h3 class="schedule__weekends--time">
+              Вихідні:
+              <p class="schedule__weekends--inline">понеділок, вівторок Каса припиняє
+                роботу за 1 годину до закриття музею
+              </p>
+            </h3>
+          </div>
+        </div>
       </div>
+      <div class="menu__foropacity"></div>
     </aside>
 
     <main class="main">
@@ -106,7 +114,10 @@
           class="events__images"
           >
         <article class="exhibition">
-          <p class="exhibition__name">ВИСТАВКА<span class="exhibition__time">26.08-29.11.2019</span></p>
+          <div class="exhibition__conteiner">
+            <p class="exhibition__name">ВИСТАВКА</p>
+            <span class="exhibition__time">26.08-29.11.2019</span>
+          </div>
           <h3 class="exhibition__title">
             Йду і повертаюсь
             <span class="exhibition__block"></span>
@@ -124,7 +135,11 @@
 
         <article class="exhibition exhibition--second">
 
-          <p class="exhibition__name">ВИСТАВКА<span class="exhibition__time">26.08-29.11.2019</span></p>
+          <div class="exhibition__conteiner">
+            <p class="exhibition__name">ВИСТАВКА</p>
+            <span class="exhibition__time">26.08-29.11.2019</span>
+          </div>
+
           <h3 class="exhibition__title">
             І спогади і мрії
             <span class="exhibition__block"></span>
@@ -156,54 +171,55 @@
 
           <div class="gallery-slide">
             <img
-            class="gallery__image gallery__image--first"
+            class="gallery__image gallery__image--first gallery__fordesktop--hover"
             src="images/gallery__first.png"
             alt="gallery__first">
           </div>
 
           <div class="gallery-slide">
             <img
-            class="gallery__image gallery__image--second"
+            class="gallery__image gallery__image--second gallery__fordesktop--hover"
             src="images/gallery__second.png"
             alt="gallery__second">
           </div>
 
           <div class="gallery-slide">
             <img
-            class="gallery__image"
+            class="gallery__image--third gallery__fordesktop--hover"
             src="images/gallery__third.png"
             alt="gallery__third">
           </div>
 
           <div class="gallery-slide">
             <img
-            class="gallery__image"
+            class="gallery__image gallery__fordesktop--hover"
             src="images/gallery__fourth.png"
             alt="gallery__fourth">
           </div>
 
           <div class="gallery-slide">
             <img
-            class="gallery__image"
+            class="gallery__image gallery__fordesktop--hover"
             src="images/gallery__fifth.png"
             alt="gallery__fourth">
           </div>
         </div>
 
-        <div>
-          <img
-          class="gallery__image__fordesktop gallery__image__fordesktop--third"
-          src="images/gallery__third.png"
-          alt="gallery__third">
-        </div>
+        <div class="gallery__fordesktop">
+          <div class="gallery-slide--fordesktop">
+            <img
+            class="gallery-slide--fordesktop--first1 gallery__fordesktop--hover"
+            src="images/gallery__third.png"
+            alt="gallery__third">
+          </div>
 
-        <div>
-          <img
-          class="gallery__image__fordesktop gallery__image__fordesktop--fourth"
-          src="images/gallery__fourth.png"
-          alt="gallery__fourth">
+          <div class="gallery-slide--fordesktop">
+            <img
+            class="gallery-slide--fordesktop--first--second2 gallery__fordesktop--hover"
+            src="images/gallery__fourth.png"
+            alt="gallery__fourth">
+          </div>
         </div>
-        <br>
 
         <div class="gallery__dot-wrapper">
           <span class="gallery__dot" onclick="currentSlide(1)"></span>
@@ -251,14 +267,24 @@
 
     <footer class="footer" id="contacts">
       <div class="footer__images">
-        <img
+        <a href="#">
+          <img
         src="images/NAMU.svg"
         alt="logo"
         class="footer__logo"
         >
+        </a>
         <div class="footer__icons-wrapper">
-          <div class="footer__facebook footer__icons"></div>
-          <div class="footer__instagram footer__icons"></div>
+          <a
+          target="_blank"
+          href="https://www.facebook.com/"
+          class="footer__facebook footer__icons"
+          ></a>
+          <a
+          target="_blank"
+          href="https://www.instagram.com/"
+          class="footer__instagram footer__icons"
+          ></a>
         </div>
       </div>
 
@@ -301,8 +327,12 @@
       <div class="footer__contacts">
         <p class="footer__contacts__text">Контакти:</p>
         <p class="footer__contacts__streets">
-          вул. М. Грушевського, 6;
-          Київ, 01001 <br>
+          <a
+          class="footer__contacts__streets__address"
+          target="_blank"
+          href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu">вул. М. Грушевського, 6;
+            Київ, 01001
+          </a> <br>
           тел. <a href="tel:+38 (044), 278-13-57" class="contacts__phone">+38 (044), 278-13-57</a> <br>
           факс <a href="tel:+38 (044) 278-74-54" class="contacts__phone">+38 (044) 278-74-54</a>
           <br>
@@ -336,3 +366,10 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
