--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,296 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/NAMU.jpg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header" id="header">
+      <div class="header__img">
+
+        <div class="header__logo-wrapper">
+          <a href="#logo" class="header__logo">
+            <img src="./images/header--logo.svg" alt="logo">
+          </a>
+        </div>
+      </div>
+
+      <div class="header__title">
+        <h1 class="header__main-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="#actual" class="header__tickets-link">КВИТКИ</a>
+      </div>
+      <a href="#menu" class="header__burger-menu"></a>
+
+
+    </header>
+
+    <aside class="aside" id="menu">
+      <div class="aside__content">
+        <div class="aside__top">
+          <a href="#close" class="aside__close-icon aside__text"></a>
+        </div>
+        <div>
+          <div class="aside__gallery">
+            <a href="#gallery" class="aside__titles">Галерея</a>
+          </div>
+          <div class="aside__actual">
+            <a href="#actual" class="aside__titles">Виставка та події</a>
+          </div>
+        </div>
+        <div>
+          <div class="aside__about-us">
+            <a href="#about-us" class="aside__titles">Про Нас</a>
+          </div>
+          <div class="aside__contacts">
+            <a href="#contacts" class="aside__titles">Контакти</a>
+          </div>
+        </div>
+      </div>
+      <div class="aside__line"></div>
+      <div class="aside__work">
+        <p class="aside__text aside__title">Графік роботи</p>
+        <ul class="aside__days">
+          <li class="aside__text">
+            <span class="aside__time">12:00 — 20:00</span>
+            середа
+          </li>
+          <li class="aside__text">
+            <span class="aside__time">12:00 — 20:00</span>
+              четвер
+          </li>
+          <li class="aside__text">
+            <span class="aside__time">12:00 — 20:00</span>
+            п’ятниця
+          </li>
+          <li class="aside__text">
+            <span class="aside__time">11:00 — 19:00</span>
+            субота
+          </li>
+          <li class="aside__text">
+            <span class="aside__time">11:00 — 19:00</span>
+            неділя
+          </li>
+        </ul>
+      </div>
+      <p class="aside__p aside__text">
+        <span class="aside__time">Вихідні:</span>
+          понеділок, вівторок
+        <br>Kaca припиняє роботу за 1 годину до закриття музею
+      </p>
+
+    </aside>
+
+    <main class="main">
+      <div
+        class="scroll-to-top"
+        id="scroll-to-top"
+      >
+      </div>
+
+      <section class="poster" id="poster">
+        <div class="poster__title-wraper">
+          <h3 class="poster__title">Актуальні події</h3>
+        </div>
+
+        <div class="action action--one">
+          <div class="action__img action__img--one"></div>
+          <div class="action__content">
+            <div class="action__details">
+              <p class="action__details-kind">ВИСТАВКА</p>
+              <div class="action__details-when">26.08-29.11.2019</div>
+            </div>
+            <div class="action__title">
+              <h3 class="action__title-text">Йду і повертаюсь</h3>
+              <a href="#action" class="action__title-red-squere"></a>
+            </div>
+            <p class="action__description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="action action--two">
+          <div class="action__img action__img--two"></div>
+          <div class="action__content">
+            <div class="action__details">
+              <p class="action__details-kind">ВИСТАВКА</p>
+              <div class="action__details-when">26.08-29.11.2019</div>
+            </div>
+            <div class="action__title">
+              <h3 class="action__title-text"> І спогади і мрії </h3>
+              <div class="action__title-red-squere"></div>
+            </div>
+            <p class="action__description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <div class="lection">
+          <div class="lection__img"></div>
+          <div class="lection__content">
+            <div class="lection__details">
+              <p class="lection__kind"> ЛЕКЦІЯ </p>
+              <div class="lection__when"> 26/08/2023 - 11:00 </div>
+            </div>
+            <h3 class="lection__tittle"> Від класицизму до романтизму </h3>
+          </div>
+
+        </div>
+
+      </section>
+      <section class="gallery" id="gallery">
+        <div class="gallery__title-wraper">
+          <h3 class="gallery__tittle"> Галерея </h3>
+        </div>
+        <div class="gallery__picture-wrapper1">
+          <img src="./images/gallery1.svg" alt="gallery__NAMU"
+          class="gallery__picture-1 main__picture">
+        </div>
+        <div class="gallery__picture-wrapper2">
+          <img src="./images/gallery2.svg" alt="gallery__NAMU"
+          class="gallery__picture-2 main__picture">
+        </div>
+        <div class="gallery__picture-wrapper3">
+          <img src="./images/gallery3.svg" alt="gallery__NAMU"
+          class="gallery__picture-3 main__picture">
+        </div>
+        <div class="gallery__picture-wrapper4">
+          <img src="./images/gallery4.svg" alt="gallery__NAMU"
+          class="gallery__picture-4 main__picture">
+        </div>
+        <div class="gallery__picture-wrapper5">
+          <img src="./images/gallery5.svg" alt="gallery__NAMU"
+          class="gallery__picture-5 main__picture">
+        </div>
+        <div class="gallery__dot-group"></div>
+      </section>
+
+      <section class="subscription">
+        <div class="subscription__big-content">
+          <div class="subscription__content-wrapper">
+            <div class="subscription__content">
+              <h3 class="subscription__title">Підписка</h3>
+              <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.          </p>
+              <form action="#" method="get"
+              onsubmit="this.reset(); return false;" class="subscription__form">
+                <input type="email"
+                placeholder="E-mail" required=""
+                class="subscription__input">
+                <button class="subscription__btn"></button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="schedule">
+        <a href="#">
+          <img
+            src="./images/namu--logo.svg"
+            alt="NAMU-logo"
+            class="schedule__logo"
+          >
+        </a>
+        <div class="schedule__social">
+          <a
+            href="https://www.facebook.com/"
+            class="schedule__fb"
+            target="_blank"
+          >
+            <img src="./images/icons/facebook--logo.svg" alt="icon-fb">
+          </a>
+          <a
+            href="https://www.instagram.com/"
+            class="schedule__instagram"
+            target="_blank"
+          >
+            <img src="./images/icons/instagram--logo.svg" alt="icon-instagram">
+          </a>
+        </div>
+        <div class="schedule__work" id="contacts">
+          <p class="schedule__title">Графік роботи</p>
+          <ul class="schedule__days">
+            <li class="schedule__day">
+              <span class="schedule__time">12:00 — 20:00</span>
+              середа
+            </li>
+            <li class="schedule__day">
+              <span class="schedule__time">12:00 — 20:00</span>
+              четверг
+            </li>
+            <li class="schedule__day">
+              <span class="schedule__time">12:00 — 20:00</span>
+              п'ятниця
+            </li>
+            <li class="schedule__day">
+              <span class="schedule__time">12:00 — 20:00</span>
+              субота
+            </li>
+            <li class="schedule__day">
+              <span class="schedule__time">12:00 — 20:00</span>
+              неділя
+            </li>
+            <li class="schedule__day--p">
+              <span class="schedule__day"> Вихідні</span>
+              Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+            </li>
+          </ul>
+        </div>
+        <div class="schedule__contacts">
+          <p class="schedule__title">Контакти:</p>
+          <ul class="schedule__adresses">
+            <li class="schedule__adress">
+              <a
+                href="https://maps.app.goo.gl/AZFNJ5t6MynoCQdj7"
+                target="_blank"
+                class="schedule__href"
+              >
+              вул. М. Грушевського, 6;
+              </a>
+            </li>
+
+            <li class="schedule__adres">Київ, 01001</li>
+
+            <li class="schedule__adres"> тел.
+              <a href="tel:+380442781357" class="schedule__href">+38 (044) 278-13-57</a>
+            </li>
+
+            <li class="schedule__adres">факс
+              <a href="tel:+380442787454" class="schedule__href">+38 (044) 278-74-54</a>
+            </li>
+
+            <li class="schedule__adres">e-mail:
+              <a class="schedule__href" href="mailto:info@namu.kyiv.ua"> info@namu.kyiv.ua </a>
+            </li>
+          </ul>
+        </div>
+        <div class="schedule__line"></div>
+        <a href="#gallery" class="schedule__gallery schedule__href schedule__link">Галерея</a>
+        <a href="#relevant" class="schedule__about-us schedule__href schedule__link">Виставки та події</a>
+        <a href="#subscription" class="schedule__events schedule__href schedule__link">Про Нас</a>
+        <a href="#footer" class="schedule__contact schedule__href schedule__link">Контакти</a>
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer__designer">Designed by Zhyriada Marina</p>
+      <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+    </footer>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
